--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "sass": "^1.59.3"
+    "sass": "^1.59.3",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
