--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "todo",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://NikolayCharaev.github.io/tasklist",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "preview": "vite preview"
   },
   "dependencies": {
     "dayjs": "^1.11.7",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
