--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "todo",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://NikolayCharaev.github.io/tasklist",
+  "homepage": "https://NikolayCharaev.github.io/tasklist.git",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
     "dayjs": "^1.11.7",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -24,6 +23,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
